// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/auto-complete/demo/basic.md correctly 1`] = `
<div
  class="wmstool-select-show-search wmstool-select-auto-complete wmstool-select wmstool-select-combobox wmstool-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="wmstool-select-selection
            wmstool-select-selection--single"
    role="combobox"
  >
    <div
      class="wmstool-select-selection__rendered"
    >
      <div
        class="wmstool-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        input here
      </div>
      <ul>
        <li
          class="wmstool-select-search wmstool-select-search--inline"
        >
          <div
            class="wmstool-select-search__field__wrap"
          >
            <input
              class="wmstool-input wmstool-select-search__field"
              type="text"
              value=""
            />
            <span
              class="wmstool-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="wmstool-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="unselectable"
    >
      <b />
    </span>
  </div>
</div>
`;

exports[`renders ./components/auto-complete/demo/certain-category.md correctly 1`] = `
<div
  class="certain-category-search-wrapper"
  style="width:250px"
>
  <div
    class="wmstool-select-lg wmstool-select-lg certain-category-search wmstool-select-show-search wmstool-select-auto-complete wmstool-select wmstool-select-combobox wmstool-select-enabled"
    style="width:100%"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="wmstool-select-selection
            wmstool-select-selection--single"
      role="combobox"
    >
      <div
        class="wmstool-select-selection__rendered"
      >
        <div
          class="wmstool-select-selection__placeholder"
          style="display:block;user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          input here
        </div>
        <ul>
          <li
            class="wmstool-select-search wmstool-select-search--inline"
          >
            <div
              class="wmstool-select-search__field__wrap"
            >
              <span
                class="wmstool-select-search__field wmstool-input-affix-wrapper"
              >
                <input
                  class="wmstool-input"
                  type="text"
                  value=""
                />
                <span
                  class="wmstool-input-suffix"
                >
                  <i
                    class="anticon anticon-search certain-category-icon"
                  />
                </span>
              </span>
              <span
                class="wmstool-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
      <span
        class="wmstool-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        <b />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/auto-complete/demo/custom.md correctly 1`] = `
<div
  class="wmstool-select-show-search wmstool-select-auto-complete wmstool-select wmstool-select-combobox wmstool-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="wmstool-select-selection
            wmstool-select-selection--single"
    role="combobox"
  >
    <div
      class="wmstool-select-selection__rendered"
    >
      <ul>
        <li
          class="wmstool-select-search wmstool-select-search--inline"
        >
          <div
            class="wmstool-select-search__field__wrap"
          >
            <textarea
              class="wmstool-input custom wmstool-select-search__field"
              placeholder="input here"
              style="height:50px"
            />
            <span
              class="wmstool-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="wmstool-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="unselectable"
    >
      <b />
    </span>
  </div>
</div>
`;

exports[`renders ./components/auto-complete/demo/non-case-sensitive.md correctly 1`] = `
<div
  class="wmstool-select-show-search wmstool-select-auto-complete wmstool-select wmstool-select-combobox wmstool-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="wmstool-select-selection
            wmstool-select-selection--single"
    role="combobox"
  >
    <div
      class="wmstool-select-selection__rendered"
    >
      <div
        class="wmstool-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        try to type \`b\`
      </div>
      <ul>
        <li
          class="wmstool-select-search wmstool-select-search--inline"
        >
          <div
            class="wmstool-select-search__field__wrap"
          >
            <input
              class="wmstool-input wmstool-select-search__field"
              type="text"
              value=""
            />
            <span
              class="wmstool-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="wmstool-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="unselectable"
    >
      <b />
    </span>
  </div>
</div>
`;

exports[`renders ./components/auto-complete/demo/options.md correctly 1`] = `
<div
  class="wmstool-select-show-search wmstool-select-auto-complete wmstool-select wmstool-select-combobox wmstool-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="wmstool-select-selection
            wmstool-select-selection--single"
    role="combobox"
  >
    <div
      class="wmstool-select-selection__rendered"
    >
      <div
        class="wmstool-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        input here
      </div>
      <ul>
        <li
          class="wmstool-select-search wmstool-select-search--inline"
        >
          <div
            class="wmstool-select-search__field__wrap"
          >
            <input
              class="wmstool-input wmstool-select-search__field"
              type="text"
              value=""
            />
            <span
              class="wmstool-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="wmstool-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="unselectable"
    >
      <b />
    </span>
  </div>
</div>
`;

exports[`renders ./components/auto-complete/demo/uncertain-category.md correctly 1`] = `
<div
  class="global-search-wrapper"
  style="width:300px"
>
  <div
    class="wmstool-select-lg wmstool-select-lg global-search wmstool-select-show-search wmstool-select-auto-complete wmstool-select wmstool-select-combobox wmstool-select-enabled"
    style="width:100%"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="wmstool-select-selection
            wmstool-select-selection--single"
      role="combobox"
    >
      <div
        class="wmstool-select-selection__rendered"
      >
        <div
          class="wmstool-select-selection__placeholder"
          style="display:block;user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          input here
        </div>
        <ul>
          <li
            class="wmstool-select-search wmstool-select-search--inline"
          >
            <div
              class="wmstool-select-search__field__wrap"
            >
              <span
                class="wmstool-select-search__field wmstool-input-affix-wrapper"
              >
                <input
                  class="wmstool-input"
                  type="text"
                  value=""
                />
                <span
                  class="wmstool-input-suffix"
                >
                  <button
                    class="wmstool-btn search-btn wmstool-btn-primary wmstool-btn-lg"
                    type="button"
                  >
                    <i
                      class="anticon anticon-search"
                    />
                  </button>
                </span>
              </span>
              <span
                class="wmstool-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
      <span
        class="wmstool-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        <b />
      </span>
    </div>
  </div>
</div>
`;
